--- a/l10n_it_sdi_channel/i18n/it.po
+++ b/l10n_it_sdi_channel/i18n/it.po
@@ -40,6 +40,12 @@ msgid "Action Needed"
 msgstr "Azione richiesta"
 
 #. module: l10n_it_sdi_channel
+#: model:ir.model.fields,help:l10n_it_sdi_channel.field_res_config_settings__group_sdi_channel_validate_send
+#: model_terms:ir.ui.view,arch_db:l10n_it_sdi_channel.view_account_config_settings
+msgid "Allow users to validate, export and send invoices to SdI in one click."
+msgstr "Permettere agli utenti di validare, esportare e inviare a SdI le fatture in un click."
+
+#. module: l10n_it_sdi_channel
 #: model:ir.model.fields,field_description:l10n_it_sdi_channel.field_sdi_channel__message_attachment_count
 msgid "Attachment Count"
 msgstr "Numero allegati"
@@ -378,6 +384,17 @@ msgstr "Inviata"
 #: model:ir.model.fields,help:l10n_it_sdi_channel.field_res_config_settings__e_invoice_user_id
 msgid "This user will be used at supplier e-bill creation."
 msgstr "Questo utente viene utilizzato per la creazione delle e-fatture fornitore."
+
+#. module: l10n_it_sdi_channel
+#: model:ir.model.fields,field_description:l10n_it_sdi_channel.field_res_config_settings__group_sdi_channel_validate_send
+#: model:res.groups,name:l10n_it_sdi_channel.res_groups_validate_send
+msgid "Validate, export and send invoices"
+msgstr "Valida, esporta e invia fatture"
+
+#. module: l10n_it_sdi_channel
+#: model_terms:ir.ui.view,arch_db:l10n_it_sdi_channel.view_invoice_form_fatturapa
+msgid "Validate, export and send to SdI"
+msgstr "Valida, esporta e invia a SdI"
 
 #. module: l10n_it_sdi_channel
 #: model:ir.model.fields,field_description:l10n_it_sdi_channel.field_sdi_channel__message_unread
